--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^8.0.1",
+    "sortablejs": "^1.15.2",
+    "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
